# slepc

./: .gitignore  .project  CMakeLists.txt  Functions.cmake  SLEPcConfig.cmake
config/: configure.py
include/: slepcconf.h.in  slepcversion.h
include/finclude/ftn-auto/: makefile  slepcbv.h90  slepcds.h90  slepceps.h90  slepcmfn.h90  slepcnep.h90  slepcpep.h90  slepcrg.h90  slepcst.h90  slepcsvd.h90  slepcsys.h90
include/slepc/finclude/ftn-auto/: makefile  slepcbv.h90  slepcds.h90  slepceps.h90  slepcfn.h90  slepcmfn.h90  slepcnep.h90  slepcpep.h90  slepcrg.h90  slepcst.h90  slepcsvd.h90  slepcsys.h90
lib/slepc/conf/: slepcvariables
src/eps/impls/cg/lobpcg/ftn-auto/: lobpcgf.c
src/eps/impls/cg/rqcg/ftn-auto/: rqcgf.c
src/eps/impls/ciss/ftn-auto/: cissf.c
src/eps/impls/davidson/gd/ftn-auto/: gdf.c
src/eps/impls/davidson/jd/ftn-auto/: jdf.c
src/eps/impls/krylov/arnoldi/ftn-auto/: arnoldif.c
src/eps/impls/krylov/krylovschur/ftn-auto/: krylovschurf.c
src/eps/impls/krylov/lanczos/ftn-auto/: lanczosf.c
src/eps/impls/power/ftn-auto/: powerf.c
src/eps/interface/ftn-auto/: epsbasicf.c  epsdefaultf.c  epsmonf.c  epsoptsf.c  epssetupf.c  epssolvef.c  epsviewf.c  makefile
src/mfn/interface/ftn-auto/: makefile  mfnbasicf.c  mfnmonf.c  mfnoptsf.c  mfnsetupf.c  mfnsolvef.c
src/nep/impls/ciss/ftn-auto/: ncissf.c
src/nep/impls/interpol/ftn-auto/: interpolf.c
src/nep/impls/slp/ftn-auto/: slpf.c
src/nep/interface/ftn-auto/: makefile  nepbasicf.c  nepdefaultf.c  nepmonf.c  nepoptsf.c  nepsetupf.c  nepsolvef.c  nepviewf.c
src/pep/impls/jd/ftn-auto/: makefile  pjdoptf.c
src/pep/impls/krylov/qarnoldi/ftn-auto/: qarnoldif.c
src/pep/impls/krylov/stoar/ftn-auto/: makefile  stoarf.c
src/pep/impls/krylov/toar/ftn-auto/: ptoarf.c
src/pep/impls/linear/ftn-auto/: linearf.c
src/pep/interface/ftn-auto/: makefile  pepbasicf.c  pepdefaultf.c  pepmonf.c  pepoptsf.c  pepsetupf.c  pepsolvef.c  pepviewf.c
src/svd/impls/cross/ftn-auto/: crossf.c
src/svd/impls/cyclic/ftn-auto/: cyclicf.c
src/svd/impls/lanczos/ftn-auto/: gklanczosf.c
src/svd/impls/trlanczos/ftn-auto/: trlanczosf.c
src/svd/interface/ftn-auto/: makefile  svdbasicf.c  svdmonf.c  svdoptsf.c  svdsetupf.c  svdsolvef.c  svdviewf.c
src/sys/classes/bv/interface/ftn-auto/: bvbasicf.c  bvfuncf.c  bvglobalf.c  bvopsf.c  bvorthogf.c  makefile
src/sys/classes/ds/impls/nep/ftn-auto/: dsnepf.c
src/sys/classes/ds/impls/pep/ftn-auto/: dspepf.c
src/sys/classes/ds/interface/ftn-auto/: dsbasicf.c  dsopsf.c  dsprivf.c  makefile
src/sys/classes/fn/impls/combine/ftn-auto/: fncombinef.c
src/sys/classes/fn/impls/phi/ftn-auto/: fnphif.c
src/sys/classes/fn/impls/rational/ftn-auto/: fnrationalf.c  makefile
src/sys/classes/fn/interface/ftn-auto/: fnbasicf.c
src/sys/classes/rg/ftn-auto/: makefile
src/sys/classes/rg/impls/ellipse/ftn-auto/: rgellipsef.c
src/sys/classes/rg/impls/interval/ftn-auto/: rgintervalf.c
src/sys/classes/rg/impls/polygon/ftn-auto/: rgpolygonf.c
src/sys/classes/rg/impls/ring/ftn-auto/: rgringf.c
src/sys/classes/rg/interface/ftn-auto/: rgbasicf.c
src/sys/classes/st/impls/cayley/ftn-auto/: cayleyf.c
src/sys/classes/st/impls/precond/ftn-auto/: precondf.c
src/sys/classes/st/impls/shell/ftn-auto/: shellf.c
src/sys/classes/st/interface/ftn-auto/: makefile  stfuncf.c  stsetf.c  stslesf.c  stsolvef.c
src/sys/ftn-auto/: makefile  slepcinitf.c  slepcscf.c  slepcutilf.c
